fix: 添加 test 命令 修改 rollup 配置写法

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "license": "ISC",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "node ./test/index.test.js"
   },
   "devDependencies": {
     "rollup": "^3.26.0",
